--- a/client/src/style/global.css
+++ b/client/src/style/global.css
@@ -9,10 +9,17 @@
 }
 
 :root{
+    width: 100vw;
     overflow-x: hidden;
     margin: 0;
 }
-
+.imageTall{
+    display: flex;
+    align-items: center;
+}
+img{
+    width: 100%;
+}
 
 main{
     min-height: 100vh;
@@ -34,6 +41,9 @@ p{
     font-weight: 500;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+a{
+    text-decoration: none;
+}
 button{
     background: black;
     color: white;
@@ -46,9 +56,8 @@ button{
 }
 nav{
     padding: 0px 50px;  
-    position: fixed;  
+    /* position: fixed;   */
     width: 100%;
-    background: white;
 }
 .logo h3{
     font-size: 2rem;
@@ -201,6 +210,9 @@ nav{
     width: 60px;
     background: black;
     border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Footer */
@@ -253,4 +265,98 @@ nav{
     height: 500px;
     padding: 30px;
     outline: none;
+}
+.textImgWrap {
+    backdrop-filter: blur(4px);
+    padding: 40px 0;
+}
+
+
+@media screen and (max-width: 400px) {
+    .hero{
+        height: 100vh;
+    }
+    .HeroTextWrap{
+        padding: 60px 30px;
+    }
+    .HeroTextWrap p {
+        max-width: 300px;
+    }
+    nav{
+        padding: 0px 0px 0 30px;
+    }
+    .logo h3{
+        font-size: 1rem;
+        font-family: Castle;
+    
+    }
+    .popWrap {
+        width: initial;
+    }
+    h2{
+        font-size: 1.5rem;
+        line-height: 40px;
+    }
+    .popText  {
+        display: block;
+        padding: 30px 30px 0;
+    }
+
+    .posts{
+        padding: 30px 30px 80px;
+    }
+    .postWrap {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .textSection {
+        display: block;
+        place-content: center;
+    }
+    .textWrapSec {
+        width: initial;
+    }
+    .textWrapSec p {
+        text-align: left;
+    }
+    .imageTall {
+        margin-bottom: 40px;
+        height: 50vh;
+    }
+    .imgWrap {
+        /* display: none; */
+        position: relative;
+        z-index: -1;
+    }
+
+
+    .imgBoxs:nth-child(1) {
+        transform: translateY(-2vh) translateX(2vw);
+        height: 377px;
+        width: 322px;
+    }
+    .imgBoxs:nth-child(5) {
+        transform: translateY(15vh) translateX(32vw);
+        height: 202px;
+        width: 246px;
+    }
+    .imgBoxs:nth-child(2) {
+        transform: translateY(116vh) translateX(29vw);
+        height: 232px;
+        width: 258px;
+    }
+    .imgBoxs:nth-child(3) {
+        transform: translateY(98vh) translateX(3vw);
+        height: 243px;
+        width: 213px;
+    }
+
+
+    #name {
+        font-size: 2rem;
+    }
+    
+    section {
+        min-height: 70vh;
+    }
 }
