--- a/client/src/style/global.css
+++ b/client/src/style/global.css
@@ -23,6 +23,7 @@ img{
 
 main{
     min-height: 100vh;
+    /* color: #fff; */
 }
 section{
     min-height: 100vh;
@@ -131,10 +132,20 @@ nav{
     display: flex;
     align-items: flex-end;
     color: black;
+    background-image: url('../assets/abstract-triangle-violet-texture-background.jpg');
 }
 .HeroTextWrap{
     width: 100%;
     padding: 60px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-direction: column;
+}
+.HeroTextWrap h1{
+    color: white;
+    text-align: center;
 }
 
 .HeroTextWrap p{
@@ -271,8 +282,50 @@ nav{
     padding: 40px 0;
 }
 
+.boxPosts{
+    padding: 0px 80px 60px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    justify-content: space-around;
+}
+.boxesPosts{
+    min-height: 440px;
+    width: 350px;
+    /* background: black; */
+    padding: 30px 25px;
+}
+.boxesPosts h1{
+    font-size: xx-large;
+}
+.imgBox{
+    height: 220px;
+    width: 100%;
+    background: black;
+    margin-bottom: 30px;
+}
+.footertop{
+    background: url('../assets/Lady.jpg') no-repeat;
+    background-size: contain;
+}
+.bttnWrap{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 
 @media screen and (max-width: 400px) {
+    .boxPosts {
+        padding: 0px 30px 60px;
+        gap: 10px;
+    }
+    
+    .boxesPosts{
+    min-height: 440px;
+    width: 450px;
+    /* background: black; */
+    padding: 30px 0px;
+}
     .hero{
         height: 100vh;
     }
@@ -350,13 +403,22 @@ nav{
         height: 243px;
         width: 213px;
     }
-
-
+    .bttnWrap{
+        display: flex;
+        justify-content: center;
+    }
+    form button{
+        width: 100%;
+    }
     #name {
         font-size: 2rem;
     }
     
     section {
         min-height: 70vh;
+    }
+    .popText {
+        display: block;
+        padding: 88px 30px 0;
     }
 }
