--- a/client/src/style/global.css
+++ b/client/src/style/global.css
@@ -25,7 +25,7 @@ h3{
 }
 
 section{
-    padding: 30px 30px;
+    padding: 30px 20px;
     overflow-x: hidden;
     position: relative;
 }
@@ -162,7 +162,6 @@ form button{
     border: none;
     margin: 30px 0 0;
     font-size: 2rem;
-
 }
 .textarea{
     border: none;
@@ -184,6 +183,41 @@ form button{
 .imageTall img{
     width: 100%;
 }
+
+
+
+.boxWrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+    margin-top: 50px;
+}
+.imgBox{
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    margin-bottom: 40px;
+}
+.imgBox img{
+    width: 100%;
+}
+.boxesPosts{
+    background: rgb(17, 0, 17);
+    color: white;
+    width: 400px;
+    padding: 30px 20px;
+}
+.boxesPosts p{
+    padding-top: 10px;
+    font-size: 18px;
+}
+.boxPosts{
+    display: flex;
+    flex-wrap: wrap;
+}
+/*  */
 
 @media screen and (min-width: 500px) {
     
